--- a/css/styles.css
+++ b/css/styles.css
@@ -4,28 +4,34 @@
 .link {
   text-decoration: none;
 }
+.e-mail {
+}
 button {
   cursor: pointer;
 }
 body {
   font-family: "Roboto", sans-serif;
+  color: #434455;
+  background-color: var(--background-color);
 }
 :root {
   --maim-color-text: #2e2f42;
   --accent-color-text: #4d5ae5;
-  --main-color-contact: #434455;
+  --background-color: #ffffff;
+  --color-text-contact: #434455;
 }
 .menu-link:hover,
 .menu-link:focus {
-  color: var(--accent-color-text);
+  color: #404bbf;
   text-decoration: underline;
 }
-.e-mail link:hover,
-.e-mail:focus {
-  color: var(--accent-color-text);
+.contact-info:hover,
+.contact-info:focus {
+  color: #404bbf;
   text-decoration: underline;
 }
-.logo-first {
+/* Logo*/
+.logotype {
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
@@ -37,26 +43,12 @@ body {
   color: #4d5ae5;
 }
 .logo-second {
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.17;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
   color: #2e2f42;
 }
 .logo-second-underside {
-  font-family: "Raleway";
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.17;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
   color: #f4f4fd;
 }
+/*Header*/
 .menu-link {
   font-weight: 500;
   font-size: 16px;
@@ -64,22 +56,14 @@ body {
   letter-spacing: 0.02em;
   color: var(--maim-color-text);
 }
-
-.telephon {
-  font-style: normal;
+.contacts-info {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--main-color-contact);
-}
-.e-mail {
   font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--main-color-contact);
+  color: var(--color-text-contact);
 }
+/*Hero*/
 .order-button {
   font-weight: 500;
   font-size: 16px;
@@ -130,7 +114,10 @@ body {
   letter-spacing: 0.02em;
   color: #434455;
 }
-.filtr-button {
+.our-team {
+  background-color: #f4f4fd;
+}
+.filter-button {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -141,8 +128,8 @@ body {
   color: #4d5ae5;
   background: #f4f4fd;
 }
-.filtr-button:hover,
-.filtr-button:focus {
+.filter-button:hover,
+.filter-button:focus {
   color: #ffffff;
   background-color: #404bbf;
 }
@@ -155,4 +142,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+}
+.our-team-item {
+  background-color: #ffffff;
 }
