--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body {
   color: #404bbf;
   text-decoration: underline;
 }
-/*.contact-info:hover,
+.contact-info:hover,
 .contact-info:focus {
   color: #404bbf;
   text-decoration: underline;
@@ -54,6 +54,7 @@ body {
   letter-spacing: 0.02em;
   color: var(--maim-color-text);
 }
+
 .contact-menu-item {
   font-size: 16px;
   line-height: 1.5;
@@ -66,13 +67,13 @@ body {
   color: #404bbf;
   text-decoration: underline;
 }
-/*.contacts-info {
+*/ .contacts-info {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   font-style: normal;
   color: var(--color-text-contact);
-} */
+}
 /*Hero*/
 .order-button {
   font-family: "Roboto", sans-serif;
@@ -129,6 +130,7 @@ body {
   background-color: #f4f4fd;
 }
 .filter-button {
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
