--- a/css/styles.css
+++ b/css/styles.css
@@ -23,11 +23,6 @@ body {
   color: #404bbf;
   text-decoration: underline;
 }
-.contact-info:hover,
-.contact-info:focus {
-  color: #404bbf;
-  text-decoration: underline;
-}
 /* Logo*/
 .logotype {
   font-family: "Raleway", sans-serif;
@@ -56,23 +51,34 @@ body {
 }
 
 .contact-menu-item {
+  font-style: normal;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  font-style: normal;
   color: var(--color-text-contact);
 }
-.contact-menu-item:hover,
+.contact-menu-item:hover {
+  color: #404bbf;
+  text-decoration: underline;
+}
 .contact-menu-item:focus {
   color: #404bbf;
   text-decoration: underline;
 }
 */ .contacts-info {
+  font-style: normal;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  font-style: normal;
   color: var(--color-text-contact);
+}
+.contact-info:hover {
+  color: #404bbf;
+  text-decoration: underline;
+}
+.contact-info:focus {
+  color: #404bbf;
+  text-decoration: underline;
 }
 /*Hero*/
 .order-button {
