--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,22 @@ body {
   letter-spacing: 0.02em;
   color: var(--maim-color-text);
 }
-
+.menu-contacts {
+  font-style: normal;
+}
+.menu-contacts-item {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--color-text-contact);
+}
+.menu-contacts-item:hover,
+.menu-contacts-item:focus {
+  color: #404bbf;
+}
+/*
 .contact-menu-item {
   font-style: normal;
   font-size: 16px;
@@ -65,7 +80,7 @@ body {
   color: #404bbf;
   text-decoration: underline;
 }
-*/ .contacts-info {
+.contacts-info {
   font-style: normal;
   font-size: 16px;
   line-height: 1.5;
@@ -79,7 +94,7 @@ body {
 .contact-info:focus {
   color: #404bbf;
   text-decoration: underline;
-}
+}*/
 /*Hero*/
 .order-button {
   font-family: "Roboto", sans-serif;
